deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-python-app
  labels:
    app: simple-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-python-app
  template:
    metadata:
      labels:
        app: simple-python-app
    spec:
      containers:
      - name: simple-python-app
        image: iamnk007/python-sample-app-demo:v1
        ports:
        - containerPort: 8000
        command: ["/app/venv1/bin/python3", "manage.py", "runserver", "0.0.0.0:8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: simple-python-app-service
spec:
  selector:
    app: simple-python-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
